# rust-training

rsmem/: Cargo.toml
rsmem/src/: main.rs
rsproject/: Cargo.toml
rsproject/src/: main.rs
solanaclient/: account.ts  index.ts  package.json
solanalib/: Cargo.toml
solanalib/src/: lib.rs
sqcross/: Cargo.toml
sqcross/src/: main.rs
sqcrosslib/: Cargo.toml
sqcrosslib/src/: lib.rs
sqcrosslib/src/cross/: mod.rs
sqcrosslib/src/cross/crosssublib/: mod.rs
