[package]
name = "solanalib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.5"
borsh = "0.9.3"
borsh-derive = "0.9.1"

[dev-dependencies]
solana-sdk = "1.9.5"

[lib]
name="solanalib"
crate-type = ["cdylib" , "lib"]
